--- a/trunk/Extension/Makefile
+++ b/trunk/Extension/Makefile
@@ -1,57 +1,16 @@
-NAME = Kirikae
+TWEAK_NAME = Kirikae
 APP_ID = jp.ashikase.kirikae
 
-# These paths must be changed to match the compilation environment
-TOOLCHAIN = /opt/iPhone/sdk/3.0/dumped
-SYS_PATH = /opt/iPhone/sys
-MS_PATH = /files/Platforms/iPhone/Projects/Others/saurik/mobilesubstrate
-LDID = /opt/iPhone/ldid
+Kirikae_OBJCC_FILES = main.mm \
+					  FavoritesController.mm \
+					  Kirikae.mm \
+					  SpotlightController.mm \
+					  SpringBoardController.mm \
+					  SpringBoardHooks.mm \
+					  TaskListCell.mm \
+					  TaskListController.mm 
+Kirikae_CFLAGS = -F$(SYSROOT)/System/Library/CoreServices -DAPP_ID=\"$(APP_ID)\"
+Kirikae_FRAMEWORKS = UIKit CoreGraphics
 
-CXX = arm-apple-darwin9-g++
-CXXFLAGS = -g0 -O2 -Wall -Werror -Wno-write-strings -include common.h -DAPP_ID=\"$(APP_ID)\"
-LD = $(CXX)
-LDFLAGS = -march=armv6 \
-		  -mcpu=arm1176jzf-s \
-		  -bind_at_load \
-		  -multiply_defined suppress \
-		  -framework CoreFoundation \
-		  -framework Foundation \
-		  -framework UIKit \
-		  -framework CoreGraphics \
-		  -F$(SYS_PATH)/System/Library/PrivateFrameworks \
-		  -L$(MS_PATH) -lsubstrate \
-		  -lobjc
-
-INCLUDES = -F$(SYS_PATH)/System/Library/PrivateFrameworks \
-		   -F$(SYS_PATH)/System/Library/CoreServices \
-		   -I$(MS_PATH) \
-		   -I./Classes
-
-SUBDIRS    = . Classes
-
-DIRLIST    := $(SUBDIRS:%=%)
-SRCS       := $(foreach dir,$(DIRLIST), $(wildcard $(dir)/*.mm))
-HDRS       := $(foreach dir,$(DIRLIST), $(wildcard $(dir)/*.h))
-OBJS       := $(SRCS:.mm=.o)
-
-all: $(NAME).dylib
-
-config:
-	ln -snf $(TOOLCHAIN) $(SYS_PATH)
-
-# Replace 'iphone' with the IP or hostname of your device
-install: $(NAME).dylib
-	rsync -z $(NAME).dylib root@iphone:/Library/MobileSubstrate/DynamicLibraries/
-	ssh root@iphone restart
-
-$(NAME).dylib: config $(OBJS) $(HDRS)
-	$(LD) -dynamiclib $(LDFLAGS) $(OBJS) -o $@
-	$(LDID) -S $@
-
-%.o: %.mm
-	$(CXX) $(CXXFLAGS) $(INCLUDES) -c $< -o $@
-	   
-clean:
-	rm -f $(OBJS) $(NAME).dylib
-
-.PHONY: all clean config install
+include framework/makefiles/common.mk
+include framework/makefiles/tweak.mk
