Both extension and prefs app are now built using Theos.

--- a/trunk/Extension/Makefile
+++ b/trunk/Extension/Makefile
@@ -12,5 +12,5 @@ Kirikae_OBJCC_FILES = main.mm \
 Kirikae_CFLAGS = -F$(SYSROOT)/System/Library/CoreServices -DAPP_ID=\"$(APP_ID)\"
 Kirikae_FRAMEWORKS = UIKit CoreGraphics
 
-include framework/makefiles/common.mk
-include framework/makefiles/tweak.mk
+include ../framework/makefiles/common.mk
+include ../framework/makefiles/tweak.mk
