--- a/trunk/layout/Applications/Kirikae.app/Info.plist
+++ b/trunk/layout/Applications/Kirikae.app/Info.plist
@@ -6,7 +6,7 @@
 	<string>English</string>
 
 	<key>CFBundleExecutable</key>
-	<string>KirikaePrefs</string>
+	<string>Preferences</string>
 
 	<key>CFBundleIdentifier</key>
 	<string>jp.ashikase.kirikae</string>
