Added initial support for libactivator

--- a/trunk/Extension/Makefile
+++ b/trunk/Extension/Makefile
@@ -4,12 +4,14 @@ APP_ID = jp.ashikase.kirikae
 Kirikae_OBJCC_FILES = main.mm \
 					  FavoritesController.mm \
 					  Kirikae.mm \
+					  KirikaeActivator.mm \
 					  SpotlightController.mm \
 					  SpringBoardController.mm \
 					  SpringBoardHooks.mm \
 					  TaskListCell.mm \
 					  TaskListController.mm 
 Kirikae_CFLAGS = -F$(SYSROOT)/System/Library/CoreServices -DAPP_ID=\"$(APP_ID)\"
+Kirikae_LDFLAGS = -lactivator
 Kirikae_FRAMEWORKS = UIKit CoreGraphics
 
 include ../framework/makefiles/common.mk
