--- a/trunk/Preferences/Makefile
+++ b/trunk/Preferences/Makefile
@@ -1,4 +1,6 @@
 APPLICATION_NAME = Preferences
+APP_ID = jp.ashikase.kirikae
+
 Preferences_BUNDLE_NAME = Kirikae
 Preferences_CFLAGS = -std=gnu99 -DMAX_PAGES=9
 Preferences_OBJC_FILES = main.m \
@@ -13,6 +15,8 @@ Preferences_OBJC_FILES = main.m \
 						 Preferences.m \
 						 RootController.m \
 						 ToggleButton.m
+Preferences_CFLAGS = -DAPP_ID=\"$(APP_ID)\"
+Preferences_LDFLAGS = -lactivator
 Preferences_FRAMEWORKS = UIKit CoreGraphics
 Preferences_PRIVATE_FRAMEWORKS = SpringBoardServices
 
