Updated for release

--- a/trunk/layout/DEBIAN/control
+++ b/trunk/layout/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: jp.ashikase.kirikae
 Name: Kirikae
-Version: svn.r170
+Version: svn.r179
 Architecture: iphoneos-arm
 Description: Backgrounder-compatible task switcher/launcher.
 Homepage: http://iphone-kirikae.googlecode.com/
@@ -8,7 +8,7 @@ Depiction: http://moreinfo.thebigboss.org/moreinfo/depiction.php?file=kirikaeDat
 Maintainer: BigBoss <bigboss@thebigboss.org>
 Author: Lance Fetters (ashikase) <gaizin@gmail.com>
 Section: System
-Depends: mobilesubstrate, firmware (>=3.0)
+Depends: firmware (>=3.0), mobilesubstrate, libactivator (>=1.1.0)
 Recommends: backgrounder
 dev: ashikase
 Sponsor: thebigboss.org <http://thebigboss.org>
