Prefs: Added colors controller

--- a/trunk/Preferences/Makefile
+++ b/trunk/Preferences/Makefile
@@ -2,19 +2,22 @@ APPLICATION_NAME = Preferences
 APP_ID = jp.ashikase.kirikae
 
 Preferences_BUNDLE_NAME = Kirikae
-Preferences_CFLAGS = -std=gnu99 -DMAX_PAGES=9
 Preferences_OBJC_FILES = main.m \
 						 AppearanceController.m \
 						 ApplicationCell.m \
 						 Application.m \
+						 ColorsController.m \
+						 ColorPickerController.m \
 						 DocumentationController.m \
 						 FavoritesController.m \
 						 GeneralController.m \
+						 GradientSlider.m \
 						 HtmlDocController.m \
 						 Preferences.m \
 						 RootController.m \
+						 SpectrumSlider.m \
 						 ToggleButton.m
-Preferences_CFLAGS = -DAPP_ID=\"$(APP_ID)\"
+Preferences_CFLAGS = -std=gnu99 -DAPP_ID=\"$(APP_ID)\"
 Preferences_LDFLAGS = -lactivator
 Preferences_FRAMEWORKS = UIKit CoreGraphics
 Preferences_PRIVATE_FRAMEWORKS = SpringBoardServices
